create security config, modify tos